# seb-hack

./: .gitignore  CMakeLists.txt  README.md  STM32G474RETx_FLASH.ld  arm-none-eabi.cmake  index.html  package-lock.json  package.json  seb.md  track-a.md  track-b.md
Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: main.c  stm32g4xx_it.c  system_stm32g4xx.c
Core/Startup/: startup_stm32g474xx.s
docs/: track-a-agentlog.md  track-a-plan.md  track-a-spec.md  track-b-agentlog.md  track-b-plan.md  track-b-spec.md
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/core/: Charts.jsx  CommandBox.jsx  NdjsonParser.js  SerialConnect.jsx  StatusPanel.jsx  SynthScope.jsx
fx_detune/: fx_detune.c  fx_detune.h
include/: audio_engine.h
sim/: CMakeLists.txt  audio_engine_sim.c  audio_engine_sim.h  harness.c  wav.c  wav.h
sim/artifacts/s1/: s1-detune.csv  s1-telemetry.ndjson
sim/timelines/: s1_temp_sweep.txt
src/: App.tsx  main.tsx  styles.css
src/audio_engine/: audio_engine.c  audio_engine.h
src/bist/: bist.c  bist.h
src/core/: CommandBox.tsx  IfField.tsx  MetricGrid.tsx  StatusPanel.tsx  TelemetryChart.tsx  replay.ts  types.ts  useSerialSource.ts  useTelemetryHistory.ts  web-serial.d.ts
src/mapping/: mapping.c  mapping.h
src/sensors/: ads1115.c  ads1115.h  bmp280.c  bmp280.h  hcsr04.c  hcsr04.h  mcp9808.c  mcp9808.h  mpu6050.c  mpu6050.h
src/showpiece/TempDetune/: CentsGauge.tsx  TempDetune.tsx  index.ts
src/showpiece/dev/: ShowpieceDevApp.tsx  fixture.ts
src/showpiece/telemetry/: IfField.tsx  types.ts  useFixtureSource.ts
src/telemetry/: telemetry.c  telemetry.h
tests/host/: Makefile  test_mapping  test_mapping.c  test_sensors  test_sensors.c  test_telemetry  test_telemetry.c
